# rrdis-cli

./: Cargo.toml  README.md
src/: commands.rs  main.rs  reply.rs
